# precept

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  Rakefile
ctest/: CMakeLists.txt  adjacency_lists.cpp  array.cpp  bezier.cpp  bound_box.cpp  doctest.h  dual.cpp  half.cpp  iterator_range.cpp  kd_tree.cpp  linalg.cpp  link_list.cpp  math.cpp  mem_stack.cpp  quaternion.cpp  serializable.cpp  static_queue.cpp  static_stack.cpp  timer.cpp
ctest/pre/: array.cpp  half.cpp  meta.cpp
ctest/pre/data_structures/: adjacency_lists.cpp  static_queue.cpp  static_stack.cpp
ctest/pre/design_patterns/: serializable.cpp
ctest/tests/: Array.cpp  Half.cpp  Observable.cpp  Preparable.cpp  RefPtr.cpp  Serializable.cpp  Serializer.cpp  StaticQueue.cpp  Timer.cpp  array.cpp  linalg.cpp  math.cpp  meta.cpp  observable.cpp  preparable.cpp  ref.cpp  serializable.cpp  static_stack.cpp  timer.cpp
include/pre/: Array  BoundBox  Dual  Half  IdString  Noise  Quaternion  Serializer  Singleton  ThreadPool  Timer  array  common  math  memory  meta  noise  quaternion  random  terminal  timer
include/pre-graphics/: AnimCurve  AnimationCurve  BasicRay  Bezier  BoundBox  Bvh  Dbvh  DynamicBbTree  DynamicBvh  DynamicKdTree  Fresnel  ImmutableBbTree  ImmutableKdTree  KdTree  Line  LinearBvh  LinearKdTree  Microsurface  Microvolume  Noise  Quadric  Ray  SimplexNoise  Triangle  WavefrontObj
include/pre-graphics/_hidden/: Converger.inl  MicrosurfaceHeight.inl  MicrosurfaceSlope.inl  NodeIterator.inl  NodeStack.inl
include/pre-graphics/_hidden/_Microsurface/: Fresnel.inl  Slope.inl
include/pre-graphics/_hidden/_microsurface/: Height.inl  Slope.inl
include/pre/_hidden/: Dual_cmath.inl.rb  dual_cmath.inl
include/pre/_hidden/_Array/: Lazy.inl  Nd.inl  (+7 more)
include/pre/data_structures/: adjacency_lists  bb_tree  kd_tree  link_list  memory_arena  memory_pool  memory_stack  static_queue  static_stack  static_string  tracking_allocator  tree_utils
include/pre/design_patterns/: IdString  Observable  Preparable  RefPtr  Serializable  id_string  observable  preparable  ref  ref_countable  serializable  singleton
include/pre/memory/: mem_arena  mem_pool  mem_stack  tracking_allocator
include/pre/misc/: terminal
include/pre/shapes/: basic_ray  bezier  bound_box  bound_sphere  capsule
(+51 files in other folders)
